--- a/src_site/index.html
+++ b/src_site/index.html
@@ -23,7 +23,7 @@
                                     <button type="button" class="captchaBox boxHover"></button>
                                 </div>
                                 <input type="checkbox" name="hiddenCaptcha" id="hiddenCaptcha" disabled="disabled"/>
-                                <label for="hiddenCaptcha" class="captchaLabel">I am stupid!</label>
+                                <label for="hiddenCaptcha" class="captchaLabel">我是智障</label>
                             </div>
                         </div>
                     </div>
@@ -37,7 +37,7 @@
 			    	                  <use xlink:href="images/logo.svg#path3713"></use>
 			    	                </svg>
                                     <div class="media__body">
-                                        <h5>又曰『智障』</h5>
+                                        <h5>也叫『智障』</h5>
                                     </div>
                                 </a>
                             </div>
@@ -51,7 +51,7 @@
                                       <use xlink:href="images/logo.svg#path3715"></use>
 			    	                </svg>
                                     <div class="media__body">
-                                        <h5>亦作『幼稚』</h5>
+                                        <h5>与『蠢』同义</h5>
                                     </div>
                                 </a>
                             </div>
