--- a/src_site/index.html
+++ b/src_site/index.html
@@ -14,9 +14,18 @@
     <body>
     
         <div class="grid-container">
-            <div class="grid-y grid-padding-y grid-margin-y align-spaced medium-grid-frame">
-                <div class="cell medium-1 small-1">
-                    <div class="grid-x align-center">
+            <div class="grid-y grid-padding-y align-spaced medium-grid-frame">
+                
+                <div class="cell medium-1">
+                   <h2>You are now at naturalstupidity.tk</h2>
+                </div>
+
+                <div class="cell medium-1">
+                   <p>Check the verification box if you are not an <em>artificial intellengence</em>.</p>
+                </div>
+
+                <div class="cell medium-2 small-1">
+                    <div class="grid-x align-center align-middle">
                         <div class="cell shrink">
                             <div class="captchaContainer">
                                 <div class="captchaWrapper">
@@ -28,6 +37,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="cell medium-6 small-10">
                     <div class="grid-x align-center">
                         <div class="cells shrink hide-for-small-only">
@@ -35,7 +45,7 @@
                                 其实就是
                             </p>
                         </div>
-                        <div class="cell large-4 medium-5 small-12">
+                        <div class="cell medium-4 small-6">
                             <div class="media">
                                 <a href="/s/">
                                     <svg class="media__image" fill="#073642" width="100%" viewBox="0 0 87.421159 86.472443">
@@ -47,13 +57,13 @@
                                 </a>
                             </div>
                         </div>  
-                        <div class="cell large-1 medium-1 hide-for-small-only"></div>
+                        <div class="cell medium-2 hide-for-small-only"></div>
                         <div class="cells shrink hide-for-small-only">
                             <p style="writing-mode: vertical-rl; text-orientation: upright;">
                                 却以为是
                             </p>
                         </div>
-                        <div class="cell large-4 medium-5 small-12">
+                        <div class="cell medium-4 small-6">
                             <div class="media">
                                 <a href="/n/">
                                     <!--<img src="images/logo.svg#path3711" style="fill:'#859900';" width="100%"/>-->
