--- a/src_site/index.html
+++ b/src_site/index.html
@@ -21,7 +21,7 @@
                 </div>
 
                 <div class="cell medium-1">
-                   <p>Check the verification box if you are not an <em>artificial intellengence</em>.</p>
+                   <p>Check the verification box if you are not an <em>artificial intelligence.</em>.</p>
                 </div>
 
                 <div class="cell medium-2 small-1">
