--- a/src_site/index.html
+++ b/src_site/index.html
@@ -14,7 +14,7 @@
     <body>
     
         <div class="grid-container">
-            <div class="grid-y grid-padding-y align-spaced medium-grid-frame">
+            <div class="grid-y grid-padding-y align-spaced large-grid-frame">
                 
                 <div class="cell medium-1">
                    <h2>You are now at naturalstupidity.tk</h2>
