--- a/src_site/index.html
+++ b/src_site/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html class="no-js" lang="en">
     <head>
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-61795702-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments)};
+  gtag('js', new Date());
+
+  gtag('config', 'UA-61795702-1');
+</script>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -93,8 +102,11 @@
 
             </div>
         </div>
+        
 	
-    
+<div class="show-for-medium">
+<a href="https://github.com/haoyun/haoyun.github.io/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>    
+</div>
 
         <!-- JavaScript -->
         <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
@@ -105,9 +117,5 @@
             hljs.initHighlightingOnLoad();
             $(document).foundation();
         </script>
-        <script src="//static.getclicky.com/js" type="text/javascript"></script>
-        <script type="text/javascript">try{ clicky.init(101019144); }catch(e){}</script>
-        <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101019144ns.gif" /></p></noscript>
     </body>
 </html>
-		
