--- a/src_site/index.html
+++ b/src_site/index.html
@@ -66,15 +66,13 @@
                         </div>
                         <div class="cell medium-4 small-6">
                             <div class="media">
-                                <div class="show-for-small-only"><span>其实只是</span></br></div>
-                                <a href="/s/">
+                                <div class="show-for-small-only"><span>其实只是</span><br></div>
+                                <div id="to-activate-1">
                                     <svg class="media__image" fill="#073642" width="100%" viewBox="0 0 87.421159 86.472443">
 			    	                  <use xlink:href="images/logo.svg#path3713"></use>
 			    	                </svg>
-                                    <div class="media__body">
-                                        <h5>又称『智障』</h5>
-                                    </div>
-                                </a>
+                                    <div class="media__body"><h5>又称『智障』</h5></div>
+                                </div>
                             </div>
                         </div>  
                         <div class="cell medium-2 hide-for-small-only"></div>
@@ -83,16 +81,14 @@
                         </div>
                         <div class="cell medium-4 small-6">
                             <div class="media">
-                                <div class="show-for-small-only"><span>却以为是</span></br></div>
-                                <a href="/n/">
+                                <div class="show-for-small-only"><span>却以为是</span><br></div>
+                                <div id="to-activate-2">
                                     <!--<img src="images/logo.svg#path3711" style="fill:'#859900';" width="100%"/>-->
                                     <svg class="media__image" fill="#073642" width="100%" viewBox="0 0 87.421159 86.472443">
                                       <use xlink:href="images/logo.svg#path3715"></use>
 			    	                </svg>
-                                    <div class="media__body">
-                                        <h5>与『蠢』同义</h5>
-                                    </div>
-                                </a>
+                                    <div class="media__body"><h5>与『蠢』同义</h5></div>
+                                </div>
                             </div>
                         </div>
                     </div>
