--- a/src_site/index.html
+++ b/src_site/index.html
@@ -103,7 +103,7 @@
                             <sup id="fn2">**. I mean I, not YOU. However, if you think you are stupid too, that's fine. <a href="#ref2" title="Jump back to **.">↩</a></sup>
                         </li>
                         <li>
-                            <sup id="fn3">***. And sometimes naive, too. <a href="#ref*" title="Jump back to ***.">↩</a></sup>
+                            <sup id="fn3">***. And sometimes naive, too. <a href="#ref3" title="Jump back to ***.">↩</a></sup>
                         </li>
                     </ul>
                     
