--- a/src_site/index.html
+++ b/src_site/index.html
@@ -65,9 +65,10 @@
                             <div class="media">
                                 <div class="show-for-small-only"><span class="extra-text">其实只是</span><br></div>
                                 <div id="to-activate-1">
-                                    <svg class="media__image" fill="#073642" width="100%" viewBox="0 0 87.421159 86.472443">
+								    <span class="media__image responsive_huge_text">蠢</span>
+                                    <!--<svg class="media__image" fill="#073642" width="100%" viewBox="0 0 87.421159 86.472443">
 			    	                  <use xlink:href="images/logo.svg#path3713"></use>
-			    	                </svg>
+			    	                </svg>-->
                                     <div class="media__body"><h5>又称『智障』</h5></div>
                                 </div>
                             </div>
@@ -80,10 +81,11 @@
                             <div class="media">
                                 <div class="show-for-small-only"><span class="extra-text">却以为是</span><br></div>
                                 <div id="to-activate-2">
+									<span class="media__image responsive_huge_text">萌</span>
                                     <!--<img src="images/logo.svg#path3711" style="fill:'#859900';" width="100%"/>-->
-                                    <svg class="media__image" fill="#073642" width="100%" viewBox="0 0 87.421159 86.472443">
+                                    <!--<svg class="media__image" fill="#073642" width="100%" viewBox="0 0 87.421159 86.472443">
                                       <use xlink:href="images/logo.svg#path3715"></use>
-			    	                </svg>
+			    	                </svg>-->
                                     <div class="media__body"><h5>与『蠢』同义</h5></div>
                                 </div>
                             </div>
