--- a/src_site/index.html
+++ b/src_site/index.html
@@ -39,7 +39,8 @@
             <div class="grid-y gird-margin-y align-spaced" style="min-height:100vh;">
                 
                 <div class="cell small-1">
-                   <h2>You are now at naturalstupidity.tk<sup><a href="#fn1" id="ref1">*</a></sup></h2>
+                   <h4><span style="font-variant: small-caps;">An Ignorant Inept &amp; Incompetent</span></h4>
+				   <h2>Natural Stupidity<sup><a href="#fn1" id="ref1">*</a></sup></h2>
                 </div>
 
                 <div class="cell small-1">
