--- a/src_site/index.html
+++ b/src_site/index.html
@@ -64,7 +64,7 @@
                                 </div>
                                 <div class="c-center-container c-right">
                                     <div class="c-logo-img">
-                                        <img alt="facepalm" width="32" height="32" src="/images/palmface.png"/>
+                                        <img alt="facepalm" width="32" height="32" src="/images/facepalm.png"/>
                                     </div>
                                     <div class="c-clogo-text">Natural Stupidity</div>
                                     <div class="c-pt">
