--- a/src_site/index.html
+++ b/src_site/index.html
@@ -123,7 +123,8 @@
                                 on various platforms.
                                 If this page did not display properly,
                                 try another modern browser,
-                                e.g. Chrome, Edge, Firefox <del>or Safari</del>.
+                                e.g. Chrome, Edge, <del>Firefox</del>
+                                <del>or Safari</del>.
                                 This site is not designed for
                                 <em>artificial intelligence</em>.                                
                                 <a href="#ref1" title="Jump back to *.">↵</a>
@@ -135,6 +136,9 @@
                                 "I am stupid", rather than "you are stupid".
                                 "I" refers to "I", not "YOU".
                                 It will fine that you thought you were stupid too.
+                                Once the this box is checked, some hidden
+                                links will appear. However, some non-hidden
+                                links are always there.
                                 <a href="#ref2" title="Jump back to **.">↵</a>
                             </sup>
                         </li>
