--- a/src_site/n/index.html
+++ b/src_site/n/index.html
@@ -10,6 +10,8 @@ title: Home
 
 <p>I've reproduced a list of recent posts here for your reading pleasure:</p>
 
+<p>将来，我会以这种不合时宜的方式在这里写一些不和时宜的东西</p>
+
 <h2>Posts</h2>
 $partial("templates/post-list.html")$
 
