--- a/src_site/index.html
+++ b/src_site/index.html
@@ -124,7 +124,8 @@
                                 If this page did not display properly,
                                 try another modern browser,
                                 e.g. Chrome, Edge, <del>Firefox</del>
-                                <del>or Safari</del>.
+                                <del>or Safari</del>,
+                                with default font-size settings.
                                 This site is not designed for
                                 <em>artificial intelligence</em>.                                
                                 <a href="#ref1" title="Jump back to *.">↵</a>
