--- a/src_site/index.html
+++ b/src_site/index.html
@@ -48,6 +48,7 @@
                     </h1>
                 </div>
                 
+                <!--
                 <div class="cell medium-2 small-1">
                     <div class="grid-x align-center align-middle">
                         <div class="cell shrink">
@@ -77,6 +78,7 @@
                         </div>
                     </div>
                 </div>
+                -->
                 
                 <div class="cell small-5 text-center">
                     <div class="grid-x align-center">
@@ -89,8 +91,10 @@
                                     <span class="extra-text">其实只是</span><br>
                                 </div>
                                 <div id="to-activate-1">
-								    <span class="media__image responsive_huge_text">蠢</span>
-                                    <div class="media__body"><h5>又称『智障』</h5></div>
+                                    <a href='/s/'>
+								        <span class="media__image responsive_huge_text">蠢</span>
+                                        <div class="media__body"><h5>又称『智障』</h5></div>
+                                    </a>
                                 </div>
                             </div>
                         </div>  
@@ -104,8 +108,10 @@
                                     <span class="extra-text">却以为是</span><br>
                                 </div>
                                 <div id="to-activate-2">
-									<span class="media__image responsive_huge_text">萌</span>
-                                    <div class="media__body"><h5>与『蠢』同义</h5></div>
+                                    <a href='/n/'>
+									    <span class="media__image responsive_huge_text">萌</span>
+                                        <div class="media__body"><h5>与『蠢』同义</h5></div>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -119,18 +125,18 @@
                 <div class="cell">
                     <ul class="extra-text" style="list-style-type: none; margin:0px">
                         <li>
-                            <sup id="fn1">*. I'm too stupid to support all browsers
-                                on various platforms.
-                                If this page did not display properly,
-                                try another modern browser,
-                                e.g. Chrome, Edge, <del>Firefox</del>
-                                <del>or Safari</del>,
+                            <sup id="fn1">*. Not all browsers on various
+                                platforms are supported.
+                                In case any page failed to display properly,
+                                please try another modern browser,
+                                e.g. Chrome, Edge, Firefox or Safari,
                                 with default font-size settings.
                                 This site is not designed for
                                 <em>artificial intelligence</em>.                                
                                 <a href="#ref1" title="Jump back to *.">↵</a>
                             </sup>
                         </li>
+                        <!--
                         <li>
                             <sup id="fn2">**. Check this verification box
                                 to confirm that
@@ -148,6 +154,7 @@
                                 <a href="#ref3" title="Jump back to ***.">↵</a>
                             </sup>
                         </li>
+                        -->
                     </ul>
                 </div>
             </div>
