--- a/src_site/n/index.html
+++ b/src_site/n/index.html
@@ -1,18 +1,17 @@
 ---
-title: Home
+title:
 ---
-
-<h2>Welcome</h2>
-
-<img alt="haskell" src="/images/haskell-logo.png" style="float: right; margin: 10px;" />
-
-<p>Welcome to my blog!</p>
-
-<p>I've reproduced a list of recent posts here for your reading pleasure:</p>
-
-<p>将来，我会以这种不合时宜的方式在这里写一些不和时宜的东西</p>
-
+<!--
 <h2>Posts</h2>
 $partial("templates/post-list.html")$
+-->
 
-<p>…or you can find more in the <a href="/archive.html">archives</a>.</p>
+
+<div class="grid-y grid-padding-y">
+<h1>Recent Posts</h1>
+$for(posts)$<div class="cell"> 
+$partial("templates/post-teaser.html")$
+</div>$endfor$
+</div>
+
+<p>…or you can find more in the <a href="archive">archives</a>.</p>
