--- a/src_site/n/index.html
+++ b/src_site/n/index.html
@@ -7,12 +7,6 @@ $partial("templates/post-list.html")$
 -->
 
 
-<div class="grid-y grid-padding-y">
 $for(posts)$
-<div class="cell"> 
-$partial("templates/post-teaser.html")$
-</div>
+$partial("templates/post-title_info-body-teaser.html")$
 $endfor$
-</div>
-
-<p>…or you can find more in the <a href="archive">archives</a>.</p>
