--- a/src_site/n/index.html
+++ b/src_site/n/index.html
@@ -1,11 +1,6 @@
 ---
-title:
+title: Blog
 ---
-<!--
-<h2>Posts</h2>
-$partial("templates/post-list.html")$
--->
-
 
 $for(posts)$
 $partial("templates/post-title_info-body-teaser.html")$
