--- a/src_site/index.html
+++ b/src_site/index.html
@@ -131,10 +131,18 @@
             <div class="grid-y">
                 <div class="cell">
                     <ul class="extra-text" style="list-style-type: none; margin:0px">
-                        <li>
-                            <sup id="fn1">*. As opposed to <em>artificial intelligence</em>.                                
-                                <a href="#ref1" title="Jump back to *.">↵</a>
-                            </sup>
+<li>
+    <sup id="fn1">*. As opposed to <em>artificial intelligence</em>.
+    <a href="#ref1" title="Jump back to *.">↵</a></sup>
+</li>
+<li>
+    <sup id="fn1">**. Text in the background image is the prose
+    <a href="//en.wikipedia.org/wiki/Former_Ode_on_the_Red_Cliffs">Former Ode on the Red Cliffs</a>
+    （前赤壁赋) written by <a href="//en.wikipedia.org/wiki/Su_Shi">Su Shi</a> (苏轼) in 1082.
+    The image is extracted from a
+    <a href="//iiif.lib.harvard.edu/manifests/view/drs:51170077$$331i">scanned copy</a>
+    of the book <em>Collected Works of Su Shi, Vol. 6</em> (苏文忠公文选，卷之六) published in the 1630s or around.
+</sup>
                         </li>
                         <!--
                         <li>
