--- a/src_site/index.html
+++ b/src_site/index.html
@@ -142,7 +142,7 @@
     The image is extracted from a
     <a href="//iiif.lib.harvard.edu/manifests/view/drs:51170077$$331i">scanned copy</a>
     of the book <em>Collected Works of Su Shi, Vol. 6</em> (苏文忠公文选，卷之六) published in the 1630s or around.
-    Circles "○" and dots "、" along the text are quotable phrases marked by editors (是为可圈可点).
+    Circles "○" and dots "、" along the text are indicating quotable phrases marked by editors (是为可圈可点).
 </sup>
                         </li>
                         <!--
