--- a/src_site/index.html
+++ b/src_site/index.html
@@ -138,12 +138,13 @@
 <li>
     <sup id="fn1">**. Text in the background image is the prose
     <a href="//en.wikipedia.org/wiki/Former_Ode_on_the_Red_Cliffs">Former Ode on the Red Cliffs</a>
-    （前赤壁赋) written by <a href="//en.wikipedia.org/wiki/Su_Shi">Su Shi</a> (苏轼) in 1082.
+    《前赤壁赋》 written by <a href="//en.wikipedia.org/wiki/Su_Shi">Su Shi</a> 「苏轼」 in 1082.
     The image is extracted from a
     <a href="//iiif.lib.harvard.edu/manifests/view/drs:51170077$$331i">scanned copy</a>
-    of the book <em>Collected Works of Su Shi, Vol. 6</em> (苏文忠公文选，卷之六) published in the 1630s or around.
+    of the book <em>Collected Works of Su Shi, Vol. 6</em> 「苏文忠公文选，卷之六」 published in the 1630s.
     Circles "○" and dots "、" along the text are indicating quotable phrases,
-    which are marked by editors (是为可圈可点).
+    which are marked by editors 「可圈可点」. This book is featured with its
+    delicate colored woodcut printing 「彩色雕版套印」.
 </sup>
                         </li>
                         <!--
