--- a/src_site/index.html
+++ b/src_site/index.html
@@ -14,7 +14,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Natural Stupidity</title>
-        <link rel="stylesheet" href="/css/app.css" />
+        <link rel="stylesheet" href="/css/main.css" />
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
     </head>
     
