--- a/src_site/index.html
+++ b/src_site/index.html
@@ -93,7 +93,7 @@
                                     <span class="extra-text">却以为是</span><br>
                                 </div>
                                 <div id="to-activate-2">
-                                    <a href='/n/'">
+                                    <a href="/n/">
 									    <span class="media__image responsive_huge_text">萌</span>
                                         <div class="media__body"><h5>与『蠢』同义</h5></div>
                                     </a>
@@ -117,7 +117,7 @@
                         </div>
                         <div class="cell medium-4 small-12">
                             <div class="media">
-                                <a href='/n/'>
+                                <a href="/n/">
 								    <div class="media__image responsive_huge_text_en">LIFE</div>
                                 </a>
                             </div>
@@ -136,7 +136,7 @@
     <a href="#ref1" title="Jump back to *.">↵</a></sup>
 </li>
 <li>
-    <sup id="fn1">**. Text in the background image is the prose
+    <sup id="fn*">**. Text in the background image is the prose
     <a href="//en.wikipedia.org/wiki/Former_Ode_on_the_Red_Cliffs">Former Ode on the Red Cliffs</a>
     《前赤壁赋》 written by <a href="//en.wikipedia.org/wiki/Su_Shi">Su Shi</a> 「苏轼」 in 1082.
     The image is extracted from a
