--- a/src_site/index.html
+++ b/src_site/index.html
@@ -67,12 +67,17 @@
 
   <div class="footer-container">
     <div class="frow-container">
-      <div class="frow direction-column items-center">
-  $partial("templates/footer.html")$
-  $partial("templates/finalize.html")$
+      <div class="frow">
+        <div class="col-md-3-4">
+          $partial("templates/footer.html")$
+        </div>
       </div>
     </div>
   </div>
+
+
+$partial("templates/finalize.html")$
+
 
 <!--
         <div class="grid-container">
