--- a/src_site/index.html
+++ b/src_site/index.html
@@ -48,7 +48,8 @@
                       <sup id="fn1">*. As opposed to <em>artificial intelligence</em>.
                       See also <a href="//www.urbandictionary.com/define.php?term=natural%20stupidity">here</a>.
                       This site has two parts: The <em>S</em>tupid, which is about mathematics; and the
-                      <em>N</em>atural, which is a blog on my life and everything else.
+                      <em>N</em>atural, which is a blog on my life and everything else. Javascript and Cookies
+                      have to be enabled for this site to be properly displayed.
                       <a href="#ref1" title="Jump back to *.">↵</a></sup>
                    </li>
                    <li>
