--- a/src_site/index.html
+++ b/src_site/index.html
@@ -34,9 +34,9 @@
                         <h1><span class="website-title">Natural Stupidity</span><sup><a href="#fn1" id="ref1">*</a></sup> </h1>
                         <div class="entrance">
                             <div class="frow text-center items-baseline">
-                                <div class="col-sm-1-3"><div class="huge-link"><a href='#'>Math</a></div></div>
+                                <div class="col-sm-1-3"><div class="huge-link"><a href='/s'>Math</a></div></div>
                                 <div class="col-sm-1-12"><div class="huge-link-smaller">&amp;</div></div>
-                                <div class="col-sm-1-3"><div class="huge-link nomore"><a href="#">More</a></div></div>
+                                <div class="col-sm-1-3"><div class="huge-link nomore"><a href="/n">More</a></div></div>
                             </div>
                         </div>
                         <div class="col-md-1-6"></div>
